--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,12 @@ tray-icon = "0.19.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ksni = { version = "0.3.3", features = ["blocking"] }
+
+[package.metadata.generate-rpm]
+vendor = "Eddie Dover <ed@eddiedover.dev>"
+assets = [
+    { source = "target/release/hourly_chime", dest = "/usr/bin/hourly_chime", mode = "755" },
+    { source = "packaging/linux/hourly-chime.desktop", dest = "/usr/share/applications/hourly-chime.desktop", mode = "644" },
+    { source = "assets/images/icon.png", dest = "/usr/share/icons/hicolor/256x256/apps/hourly-chime.png", mode = "644" },
+    { source = "dev.eddiedover.hourly_chime.metainfo.xml", dest = "/usr/share/metainfo/", mode = "644" }
+]
