--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ directories = "6.0.0"
 eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
 rfd = "0.16.0"
 tokio = { version = "1.48.0", features = ["full"] }
+rand = "0.9.2"
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 tray-icon = "0.19.2"
