--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,39 +1,36 @@
-name: Release
+name: Release RPM
 
 on:
   release:
     types: [created]
-
-env:
-  CARGO_TERM_COLOR: always
 
 jobs:
   build-rpm:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libasound2-dev libgtk-3-dev libxkbcommon-dev libwayland-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev
+    - name: Install Qt and Dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y qt6-base-dev qt6-multimedia-dev libgl1-mesa-dev rpm build-essential cmake
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+    - name: Configure CMake
+      run: cmake -B build -DCMAKE_BUILD_TYPE=Release
 
-      - name: Install cargo-generate-rpm
-        run: cargo install cargo-generate-rpm
+    - name: Build
+      run: cmake --build build
 
-      - name: Build Release Binary
-        run: cargo build --release
+    - name: Package RPM
+      run: |
+        cd build
+        cpack -G RPM
 
-      - name: Generate RPM
-        run: cargo generate-rpm
-
-      - name: Upload Release Asset
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: target/generate-rpm/*.rpm
+    - name: Upload Release Asset
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: build/*.rpm
