--- a/packaging/linux/hourly-chime.desktop
+++ b/packaging/linux/hourly-chime.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Type=Application
 Name=Hourly Chime
-Comment=Plays an hourly chime
-Exec=hourly_chime
+Comment=Plays a sound every hour
+Exec=HourlyChime
 Icon=hourly-chime
 Terminal=false
 Categories=Utility;Clock;
