--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,11 @@
-name: Release RPM
+name: Release
 
 on:
   release:
     types: [created]
 
 jobs:
-  build-rpm:
+  build-linux:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -37,3 +37,37 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: build/*.rpm
+
+  build-windows:
+    runs-on: windows-latest
+    permissions:
+      contents: write
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v3
+      with:
+        version: '6.5.3'
+        arch: 'win64_msvc2019_64'
+
+    - name: Configure CMake
+      run: |
+        cmake -B build -DCMAKE_BUILD_TYPE=Release `
+          -DHOURLY_CHIME_VERSION="${{ github.ref_name }}" `
+          -DHOURLY_CHIME_BUILD_DATE="$(Get-Date -Format 'yyyy-MM-dd')"
+
+    - name: Build
+      run: cmake --build build --config Release
+
+    - name: Package
+      run: |
+        cd build
+        cpack -C Release -G NSIS
+
+    - name: Upload Release Asset
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: build/*.exe
