--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,7 @@ jobs:
       with:
         version: '6.5.3'
         arch: 'win64_msvc2019_64'
+        modules: 'qtmultimedia'
 
     - name: Configure CMake
       run: |
